<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/item_update" android:titleCondensed="@string/update" android:icon="@android:drawable/ic_menu_edit" android:title="@string/update_status" android:showAsAction="always"></item><item android:id="@+id/item_refresh" android:icon="@android:drawable/ic_menu_rotate" android:showAsAction="always" android:title="@string/refresh">
    </item><item
        android:id="@+id/item_prefs"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom"
        android:title="@string/prefs">
    </item>
    <item
        android:id="@+id/item_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom"
        android:title="@string/yamba_about">
    </item>
    
    
    <item android:id="@+id/item_start" android:icon="@android:drawable/ic_media_play" android:showAsAction="never" android:title="@string/start_service">
    </item><item android:id="@+id/item_stop" android:icon="@android:drawable/ic_media_pause" android:showAsAction="never" android:title="@string/stop_service">
    </item>
    

</menu>